--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,433 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="icon" 
+          type="image/x-icon" 
+          href="../src/images/museum.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" 
+          href="https://fonts.gstatic.com" 
+          crossorigin="true">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&family=Inter:wght@400;700&family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600&family=Poppins:wght@600&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
+
   <body>
-    <h1>Hello Mate Academy</h1>
+
+    <header class="header-picture" href="#header">
+      <div class="container container-bottom222222">
+        <div class="top__action">
+          <a href="#menu" 
+             class="icon "
+             alt="Sandwich-Menu">
+            <svg xmlns="http://www.w3.org/2000/svg" 
+                 width="24" 
+                 height="24" 
+                 viewBox="0 0 24 24" 
+                 fill="none">
+              <g clip-path="url(#clip0_320_90)">
+                <path d="M3 18H21V16H3V18ZM3 13H21V11H3V13ZM3 6V8H21V6H3Z" fill="#0F0E08">
+              </g>
+              <defs>
+                <clippath id="clip0_320_90">
+                  <rect width="24" 
+                        height="24" 
+                        fill="white">
+                </clippath>
+              </defs>
+            </svg>
+          </a>
+          <h1 class="title">Na<br>Mu</h1>
+
+        </div>
+        <div class="title title-main">
+          Художній музей
+        </div>
+        <div class="buttons">
+          <div class="discription discription-top">
+            квитки
+          </div>
+          <div class="button">
+            <a href="#menu" 
+               class="icon" 
+               alt="Button-arrow">
+              <svg height="24" 
+                   viewBox="0 0 24 24" 
+                   fill="none" 
+                   xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_47027_22)">
+                  <path d="M8.58984 16.59L13.1698 12L8.58984 7.41L9.99984 6L15.9998 12L9.99984 18L8.58984 16.59Z"
+                    fill="#D7DDE3">
+                </g>
+                <defs>
+                  <clippath id="clip0_47027_22">
+                    <rect width="24" 
+                          height="24" 
+                          fill="white">
+                  </clippath>
+                </defs>
+              </svg>
+            </a>
+          </div>
+        </div>
+
+        <div class="discription discription-color">
+          <div class="before">
+          </div>
+          Події
+        </div>
+      </div>
+    </header>
+
+
+    <aside class="menu__top-slide header-picture" id="menu">
+      <div class="container">
+        <div class="menu__top">
+          <div class="menu__top-content">
+            <a href="#">
+              <img class="menu__cross" 
+                   src="../src/images/ri-close-fill.svg" alt="Closed_cross">
+            </a>
+            <div class="menu__top-content--part">
+              <div class="menu__top-content--text">
+                Галерея
+              </div>
+              <div class="menu__top-content--text">
+                Виставки&nbsp;та
+                <br>
+                подї
+              </div>
+            </div>
+            <div class="menu__top-content--part">
+              <div class="menu__top-content--text">
+                Про нас
+              </div>
+              <div class="menu__top-content--text">
+                Контакти
+              </div>
+
+              <!-- </div> -->
+              <!-- </div> -->
+            </div>
+          </div>
+
+          <div class="menu__top-line">
+          </div>
+
+          <div class="menu__top-content menu__top-content-time">
+            <div class="menu__top-content--part">
+              <div class="menu__top-content--text">
+                Години&nbsp;роботи
+              </div>
+              <div class="menu__top--list menu__top-content-time">
+                <div class="list menu__top-content--text">
+
+                  <ul class="list">
+                    <ol><span>12:00-&nbsp;20:00</span>&nbsp;середа</ol>
+                    <ol><span>12:00-&nbsp;20:00</span>&nbsp;четвер</ol>
+                    <ol><span>12:00-&nbsp;20:00</span>&nbsp;п'ятниця</ol>
+                    <ol><span>12:00-&nbsp;20:00</span>&nbsp;субота</ol>
+                    <ol><span>12:00-&nbsp;20:00</span>&nbsp;неділя</ol>
+                  </ul>
+                </div>
+                <div class="list222 menu__top-content--text">
+                  <div class="list">
+                    <span>Вихідні:</span> понеділок, вівторок
+                    <br>
+                    Каса припиняє роботу за 1 годину
+                    до закриття музею
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <section class="container container-top">
+      <div class="h1">
+        <h1>Актуальні події</h1>
+      </div>
+      <div class="ivent__block">
+        <div class="img img-1"></div>
+        <div>
+          <div class="ivent">
+            Виставка<span class="ivent-date">26.08-&nbsp;29.11.2019</span>
+          </div>
+
+          <div>
+            <h2 class="h2">Йду і повертаюсь</h2>
+          </div>
+          <div class="ivent-discrioption">
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво
+            другої половини 1980-1995 років.
+          </div>
+        </div>
+      </div>
+
+      <div class="ivent__block">
+        <div class="img img-2"></div>
+        <div>
+          <div class="ivent">
+            Виставка<span class="ivent-date">26.08-&nbsp;29.11.2019</span>
+          </div>
+
+          <div>
+            <h2 class="h2">І спогади і мрії</h2>
+          </div>
+          <div class="ivent-discrioption">
+            Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни
+            Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <section class="container222 container-bottom">
+      <div class="bacground__picture">
+        <div class="banner">
+          <div class="bacground__picture-banner">
+            <div class="ivent">
+              Виставка<span class="ivent-date">26.08-&nbsp;29.11.2019</span>
+            </div>
+
+            <div>
+              <h2 class="h222">Від класицизму до
+                <br>
+                романтизму
+              </h2>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+    </section>
+
+    <section class="container">
+      <div class="h1">
+        <h1>Галерея</h1>
+      </div>
+      <div class="galery">
+        <div class="galery-main">
+          <div class="galery-main-photo-1"></div>
+          <div class="galery-main-photo-2"></div>
+          <div class="galery-main-photo-3"></div>
+          <div class="galery-main-photo-4"></div>
+
+        </div>
+        <div class="galery-slave">
+
+          <div class="galery-slave-photo-3"></div>
+          <div class="galery-slave-photo-4"></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="subscribe">
+
+      <div class="subscribe_block">
+        <div class="subscribe_block-height">
+          <h1 class="h1-sub">Підписка</h1>
+
+          <div class="h1-sub h1-sub-discription">Бути в курсі всіх актуальних подій та останніх новин.</div>
+        </div>
+        <form onsubmit="this.reset(); return false">
+          <div class="subscribe_position">
+
+            <input name="email"
+                   type="email" 
+                   placeholder="E-mail" 
+                   class="subscribe_form" 
+                   autocomplete="on" 
+                   required>
+            <button class="button button-bottom">
+              <a href="mail to:example@gmail" 
+                 class="icon" 
+                 alt="Button-arrow">
+                <svg
+                     height="24" 
+                     viewBox="0 0 24 24" 
+                     fill="none"
+                     xmlns="http://www.w3.org/2000/svg">
+                  <g clip-path="url(#clip0_47027_22)">
+                    <path d="M8.58984 16.59L13.1698 12L8.58984 7.41L9.99984 6L15.9998 12L9.99984 18L8.58984 16.59Z"
+                      fill="#D7DDE3">
+                  </g>
+                  <defs>
+                    <clippath id="clip0_47027_23">
+                      <rect width="24" 
+                            height="24" 
+                            fill="white">
+                    </clippath>
+                  </defs>
+                </svg>
+              </a>
+            </button>
+          </div>
+        </form>
+
+
+
+      </div>
+
+    </section>
+
+    <footer class="container footer">
+
+
+      <div class="menu__footer">
+        <div class="footer__top">
+          <h1 class="footer-title">Na<br>Mu</h1>
+          <div class="logo222 logo__social222
+              social">
+            <a href="https://www.facebook.com/" 
+               class="svg" 
+               target="_blank">
+              <svg width="24" 
+                   height="24" 
+                   viewBox="0 -4 24 24" 
+                   fill="none" 
+                   xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_320_220)">
+                  <path
+                    d="M8.80699 4.64899C8.80699 5.2538 8.80699 7.9533 8.80699 7.9533H6.38992V11.9938H8.80699V24.0009H13.7722V11.9942H17.104C17.104 11.9942 17.4161 10.0568 17.5673 7.93841C17.1337 7.93841 13.7909 7.93841 13.7909 7.93841C13.7909 7.93841 13.7909 5.58776 13.7909 5.17573C13.7909 4.76282 14.3323 4.2074 14.8674 4.2074C15.4014 4.2074 16.5286 4.2074 17.5726 4.2074C17.5726 3.65727 17.5726 1.75647 17.5726 0.000976577C16.1789 0.000976577 14.5933 0.000976577 13.8944 0.000976577C8.68426 0.000697581 8.80699 4.04524 8.80699 4.64899Z"
+                    fill="black" >
+                </g>
+                <defs>
+                  <clippath id="clip0_320_220">
+                    <rect width="23.9626" 
+                          height="24" 
+                          fill="white" >
+                  </clippath>
+                </defs>
+              </svg>
+            </a>
+            <a href="https://www.instagram.com/" 
+               target="_blank" 
+               class="svg">
+              <svg width="25" 
+                   height="24" 
+                   viewBox="0 -2 29 24" 
+                   fill="none" 
+                   xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_320_223)">
+                  <path
+                    d="M17.5908 0H6.58397C3.0017 0 0.0874023 2.9143 0.0874023 6.49657V17.5036C0.0874023 21.0857 3.0017 24 6.58397 24H17.591C21.1731 24 24.0874 21.0857 24.0874 17.5036V6.49657C24.0874 2.9143 21.1731 0 17.5908 0V0ZM12.0874 18.5623C8.46886 18.5623 5.52507 15.6185 5.52507 12C5.52507 8.38145 8.46886 5.43767 12.0874 5.43767C15.7059 5.43767 18.6497 8.38145 18.6497 12C18.6497 15.6185 15.7059 18.5623 12.0874 18.5623ZM18.8066 6.98528C17.7373 6.98528 16.8675 6.11553 16.8675 5.04619C16.8675 3.97686 17.7373 3.10693 18.8066 3.10693C19.8759 3.10693 20.7459 3.97686 20.7459 5.04619C20.7459 6.11553 19.8759 6.98528 18.8066 6.98528Z"
+                    fill="black">
+                    <path
+                      d="M12.0874 6.84473C9.24487 6.84473 6.93207 9.15734 6.93207 12.0001C6.93207 14.8426 9.24487 17.1554 12.0874 17.1554C14.9301 17.1554 17.2427 14.8426 17.2427 12.0001C17.2427 9.15734 14.9301 6.84473 12.0874 6.84473Z"
+                      fill="black">
+                      <path
+                        d="M18.8066 4.51416C18.5133 4.51416 18.2745 4.75293 18.2745 5.04626C18.2745 5.3396 18.5133 5.57837 18.8066 5.57837C19.1001 5.57837 19.3389 5.33978 19.3389 5.04626C19.3389 4.75275 19.1001 4.51416 18.8066 4.51416Z"
+                        fill="black">
+                </g>
+                <defs>
+                  <clippath id="clip0_320_223">
+                    <rect width="24" 
+                          height="24" 
+                          fill="white" 
+                          transform="translate(0.0874023)">
+                  </clippath>
+                </defs>
+              </svg>
+
+            </a>
+          </div>
+
+        </div>
+
+        <div class="footer__blocks">
+          <div class="menu__footer-content">
+            <div class="menu__top-content--part">
+              <div class="list__footer">
+                <div class="menu__footer-content--text">
+                  Години&nbsp;роботи
+                </div>
+                <ul class="list__footer-time">
+                  <ol><span>12:00-&nbsp;20:00 </span>середа</ol>
+                  <ol><span>12:00-&nbsp;20:00 </span>четвер</ol>
+                  <ol><span>12:00-&nbsp;20:00 </span>п'ятниця</ol>
+                  <ol><span>12:00-&nbsp;20:00 </span>субота</ol>
+                  <ol><span>12:00-&nbsp;20:00 </span>неділя</ol>
+                </ul>
+                <div class="list__footer-time">
+                  <span>Вихідні:</span> понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </div>
+              </div>
+            </div>
+
+            <div class="menu__top-content--part">
+
+
+
+              <div class="list__footer">
+                <div class="menu__footer-content--text">
+                  Контакти:
+                </div>
+                <div class="menu__footer-content--adres">
+                  вул. М. Грушевського, 6; Київ, 01001
+                  тел. +38 (044) 278-13-57
+                  факс +38 (044) 278-74-54
+                  e-mail: info@namu.kiev.ua
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+          <div class="menu__footer-line">
+          </div>
+
+          <div class="menu__footer-content">
+            <div class="menu__top-content--part">
+              <div class="list__footer">
+                <div class="menu__footer-content--text">
+                  Галерея
+                </div>
+                <div class="menu__footer-content--text">
+                  Виставки та події
+                </div>
+
+              </div>
+            </div>
+
+            <div class="menu__top-content--part">
+
+              <div class="list__footer">
+                <div class="menu__footer-content--text">
+                  Про Нас
+                </div>
+                <div class="menu__footer-content--text">
+                  Контакти
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <div class="footer__bottom--text">
+          Copyright © 2019. All Rights Reserved.
+        </div>
+        <div class="footer__bottom--text">
+          Designed by Zhyriada Marina
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
+
 </html>
